--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script type="module" src="./script.js"></script>
     <script type="module" src="script2.js"></script>
     <script type="module" src="script3.js"></script>
+    <script type="module" src="script4.js"></script>
+    <script type="module" src="script5.js"></script>
 </body>
 </html>
