--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script type="module" src="script3.js"></script>
     <script type="module" src="script4.js"></script>
     <script type="module" src="script5.js"></script>
+    <script type="module" src="script6.js"></script>
 </body>
 </html>
