--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script type="module" src="script4.js"></script>
     <script type="module" src="script5.js"></script>
     <script type="module" src="script6.js"></script>
+    <script type="module" src="scripthm4.js"></script>
 </body>
 </html>
