--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Машина</h1>
     <script type="module" src="./script.js"></script>
@@ -14,5 +16,7 @@
     <script type="module" src="script5.js"></script>
     <script type="module" src="script6.js"></script>
     <script type="module" src="scripthm4.js"></script>
+    <script type="module" src="./scripthm5.js"></script>
 </body>
+
 </html>
